--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "eslint": "^8.24.0"
+    "devDependencies": {
+      "eslint": "7.17.0"
+    },
+    "resolutions": {
+      "eslint": "7.17.0"
+    }
   }
-}
