--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
       "last 1 safari version"
     ]
   },
-    "devDependencies": {
-      "eslint": "7.17.0"
-    },
-    "resolutions": {
-      "eslint": "7.17.0"
-    }
+  "resolutions": {
+    "eslint": "7.17.0"
+  },
+  "devDependencies": {
+    "eslint-config-react-app": "^7.0.1"
   }
+}
