--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.62",
     "@types/react": "^18.0.21",
+    "@types/react-autosuggest": "^10.1.5",
     "@types/react-dom": "^18.0.6",
+    "@unform/core": "^2.1.6",
     "axios": "^1.1.3",
     "install": "^0.13.0",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
