--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -57,6 +59,7 @@
     "eslint": "7.17.0"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "eslint-config-react-app": "^7.0.1",
     "tailwindcss": "^3.2.1"
