--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.6",
     "@unform/core": "^2.1.6",
     "axios": "^1.1.3",
+    "bootstrap-icons": "^1.10.1",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
