--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "node ./server.js",
@@ -67,6 +66,7 @@
     "eslint": "^8.38.0",
     "eslint-config-react-app": "^7.0.1",
     "tailwindcss": "^3.2.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "web-vitals": "^2.1.4"
   }
 }
