--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.9"
   },
   "scripts": {
     "start": "node ./server.js",
@@ -35,13 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "lint": "eslint . --ext .ts"
   },
   "browserslist": {
     "production": [
@@ -55,16 +50,9 @@
       "last 1 safari version"
     ]
   },
-  "resolutions": {
-    "eslint": "7.17.0"
-  },
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.38.0",
-    "eslint-config-react-app": "^7.0.1",
     "tailwindcss": "^3.2.1",
     "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
