--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-autosuggest": "^10.1.5",
     "@types/react-dom": "^18.0.6",
     "@unform/core": "^2.1.6",
+    "@vercel/analytics": "^1.0.0",
     "axios": "^1.3.6",
     "bootstrap-icons": "^1.10.1",
     "install": "^0.13.0",
