--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-inlinesvg": "^3.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
+    "eslint": "^8.38.0",
     "tailwindcss": "^3.2.1",
     "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
