--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,4 +18,7 @@
     "[typescriptreact]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
 }
