--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@mui/base": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.8",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/system": "^5.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.24",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.21",
     "@types/react-autosuggest": "^10.1.5",
     "@types/react-dom": "^18.0.6",
@@ -25,7 +27,6 @@
     "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-inlinesvg": "^3.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
