--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,26 +1,26 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: React tests
-on:
-  push:
-    branches: [ "master","development" ]
-  pull_request:
-    branches: [ "master","development" ]
+# name: React tests
+# on:
+#   push:
+#     branches: [ "master","development" ]
+#   pull_request:
+#     branches: [ "master","development" ]
 
-jobs:
-  job1:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'pnpm'
-      - run: pnpm ci
-      - run: pnpm build --if-present
-      - name: pnpm eslint
-        run: |
-          pnpm lint:fix
+# jobs:
+#   job1:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: ${{ matrix.node-version }}
+#           cache: 'pnpm'
+#       - run: pnpm ci
+#       - run: pnpm build --if-present
+#       - name: pnpm eslint
+#         run: |
+#           pnpm lint:fix
 
