--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Sig3_Components",
-  "version": "0.2.6",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -22,6 +22,7 @@
     "@vercel/analytics": "^1.0.0",
     "axios": "^1.3.6",
     "bootstrap-icons": "^1.10.5",
+    "express": "^4.18.2",
     "install": "^0.13.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -54,10 +55,13 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.39.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -68,15 +72,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
-    "web-vitals": "^2.1.4",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.4",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "web-vitals": "^2.1.4"
   },
   "jest": {
     "moduleNameMapper": {
