--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "start": "node ./server.js",
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --fix --report-unused-disable-directives --max-warnings 0 " ,
     "preview": "vite preview"
   },
   "browserslist": {
